--- a/projeto I/index.html
+++ b/projeto I/index.html
@@ -7,13 +7,17 @@
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>The Last Of Us</h1>
-    <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam delectus in odit aliquam. Saepe atque voluptatibus rerum, ipsum praesentium optio quisquam quod ex eligendi est illo impedit quidem corporis odio accusantium nihil repudiandae sed quibusdam, debitis repellat assumenda, ea ut numquam! Dignissimos dolorem eos dolores facere inventore molestiae sit iusto consectetur voluptatibus necessitatibus, minus omnis deleniti velit tempore sunt perspiciatis.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci molestias soluta enim officia sequi fugit saepe animi ex, magnam ut harum, unde a quod asperiores inventore natus! Recusandae, aliquam maiores.</p>
-    <hr>
-        <img src="imagens/images.jpg" alt="imagem 1">
-    <img src="imagens/Joel-and-Ellie-Cover-Image.jpg" alt="imagem 2">
-    <img src="imagens/The_Last_of_Us_capa.png" alt="imagem 3">
+    <header></header>
+    <main>
+        <h1>The Last Of Us</h1>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam delectus in odit aliquam. Saepe atque voluptatibus rerum, ipsum praesentium optio quisquam quod ex eligendi est illo impedit quidem corporis odio accusantium nihil repudiandae sed quibusdam, debitis repellat assumenda, ea ut numquam! Dignissimos dolorem eos dolores facere inventore molestiae sit iusto consectetur voluptatibus necessitatibus, minus omnis deleniti velit tempore sunt perspiciatis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci molestias soluta enim officia sequi fugit saepe animi ex, magnam ut harum, unde a quod asperiores inventore natus! Recusandae, aliquam maiores.</p>
+        <hr>
+            <a href="https://store.epicgames.com/"><img src="imagens/images.jpg" alt="imagem 1"></a>
+        <img src="imagens/Joel-and-Ellie-Cover-Image.jpg" alt="imagem 2">
+        <img src="imagens/The_Last_of_Us_capa.png" alt="imagem 3">
+    </main>
+    <footer></footer>
 </body>
-</html>
+</html>    
