--- a/projeto I/index.html
+++ b/projeto I/index.html
@@ -17,7 +17,8 @@
         <img src="imagens/images.jpg" alt="imagem 1">
         <img src="imagens/Joel-and-Ellie-Cover-Image.jpg" alt="imagem 2">
         <img src="imagens/The_Last_of_Us_capa.png" alt="imagem 3">
-        <video src="videos/videoplayback.m4a"></video>
+        <hr>
+        <video src="videos/POZE.mp4" controls></video>
     </main>
     <footer></footer>
 </body>
